--- a/PotatoGame/PotatoGame.vcxproj.filters
+++ b/PotatoGame/PotatoGame.vcxproj.filters
@@ -55,6 +55,12 @@
     <Filter Include="Header Files\GameEditor\Scene">
       <UniqueIdentifier>{b1d5f6c7-4812-4961-aca3-1c3762933421}</UniqueIdentifier>
     </Filter>
+    <Filter Include="MonkeyEngine">
+      <UniqueIdentifier>{e07143af-ca3d-4dd7-86af-74dae91f7a06}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MonkeyEngine\Engine">
+      <UniqueIdentifier>{ad12121d-4eb4-4f2b-abba-62d90b067da9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -201,6 +207,9 @@
     <ClInclude Include="TextBox.h">
       <Filter>Header Files\PG\Gui\Element</Filter>
     </ClInclude>
+    <ClInclude Include="MonkeyEngineInstance.h">
+      <Filter>MonkeyEngine\Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -208,6 +217,9 @@
     </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MonkeyEngineInstance.cpp">
+      <Filter>MonkeyEngine\Engine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
