--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="CombatScene.h" />
+    <ClInclude Include="EditorInstance.h" />
     <ClInclude Include="ImageBox.h" />
     <ClInclude Include="MapEditorScene.h" />
     <ClInclude Include="MonkeyEngineInstance.h" />
@@ -105,7 +106,6 @@
     <ClInclude Include="EngineObjectList.h" />
     <ClInclude Include="BuildableObject.h" />
     <ClInclude Include="Font.h" />
-    <ClInclude Include="PGEditorInstance.h" />
     <ClInclude Include="GameModel.h" />
     <ClInclude Include="PGMapAtlas.h" />
     <ClInclude Include="PGMapGrid.h" />
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CombatScene.cpp" />
+    <ClCompile Include="EditorInstance.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapEditorScene.cpp" />
     <ClCompile Include="MonkeyEngineInstance.cpp" />
