More roppust c++ way of doing thing

--- a/MonkeyEditor/Makefile
+++ b/MonkeyEditor/Makefile
@@ -201,6 +201,7 @@ Makefile: MonkeyEditor.pro C:\Qt\5.8\msvc2013\mkspecs\win32-msvc2013\qmake.conf 
 		C:\Qt\5.8\msvc2013\mkspecs\features\qt_config.prf \
 		C:\Qt\5.8\msvc2013\mkspecs\win32-msvc2013\qmake.conf \
 		C:\Qt\5.8\msvc2013\mkspecs\features\spec_post.prf \
+		.qmake.stash \
 		C:\Qt\5.8\msvc2013\mkspecs\features\exclusive_builds.prf \
 		C:\Qt\5.8\msvc2013\mkspecs\features\toolchain.prf \
 		C:\Qt\5.8\msvc2013\mkspecs\features\default_pre.prf \
@@ -359,6 +360,7 @@ C:\Qt\5.8\msvc2013\mkspecs\features\qt_functions.prf:
 C:\Qt\5.8\msvc2013\mkspecs\features\qt_config.prf:
 C:\Qt\5.8\msvc2013\mkspecs\win32-msvc2013\qmake.conf:
 C:\Qt\5.8\msvc2013\mkspecs\features\spec_post.prf:
+.qmake.stash:
 C:\Qt\5.8\msvc2013\mkspecs\features\exclusive_builds.prf:
 C:\Qt\5.8\msvc2013\mkspecs\features\toolchain.prf:
 C:\Qt\5.8\msvc2013\mkspecs\features\default_pre.prf:
