--- a/PotatoGame/PotatoGame.vcxproj.filters
+++ b/PotatoGame/PotatoGame.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="MonkeyEngine\Engine">
       <UniqueIdentifier>{ad12121d-4eb4-4f2b-abba-62d90b067da9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\PG\Engine\Renderer\ShaderProgram">
+      <UniqueIdentifier>{cbd7069d-bb24-4c6c-9ef5-d59d7c15828d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -201,14 +204,20 @@
     <ClInclude Include="GUICanvas.h">
       <Filter>Header Files\PG\Gui</Filter>
     </ClInclude>
-    <ClInclude Include="PGMapEditor.h">
-      <Filter>Header Files\GameEditor\Scene</Filter>
-    </ClInclude>
     <ClInclude Include="TextBox.h">
       <Filter>Header Files\PG\Gui\Element</Filter>
     </ClInclude>
     <ClInclude Include="MonkeyEngineInstance.h">
       <Filter>MonkeyEngine\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderProgram.h">
+      <Filter>Header Files\PG\Engine\Renderer\ShaderProgram</Filter>
+    </ClInclude>
+    <ClInclude Include="CombatScene.h">
+      <Filter>Header Files\GameEditor\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="MapEditorScene.h">
+      <Filter>Header Files\GameEditor\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -220,6 +229,15 @@
     </ClCompile>
     <ClCompile Include="MonkeyEngineInstance.cpp">
       <Filter>MonkeyEngine\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="ShaderProgram.cpp">
+      <Filter>Header Files\PG\Engine\Renderer\ShaderProgram</Filter>
+    </ClCompile>
+    <ClCompile Include="CombatScene.cpp">
+      <Filter>Header Files\GameEditor\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="MapEditorScene.cpp">
+      <Filter>Header Files\GameEditor\Scene</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
