--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -146,11 +146,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnimatorManager.h" />
     <ClInclude Include="AxisMesh.h" />
     <ClInclude Include="BaseMesh.h" />
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="CombatScene.h" />
+    <ClInclude Include="Debugger.h" />
     <ClInclude Include="EditorInstance.h" />
     <ClInclude Include="GridRawDataV2.h" />
     <ClInclude Include="HexaGridMapMesh.h" />
@@ -209,9 +211,11 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AnimatorManager.cpp" />
     <ClCompile Include="BaseMesh.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CombatScene.cpp" />
+    <ClCompile Include="Debugger.cpp" />
     <ClCompile Include="EditorInstance.cpp" />
     <ClCompile Include="GridRawDataV2.cpp" />
     <ClCompile Include="HexaGridMapMesh.cpp" />
