--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -220,6 +220,7 @@
     <ClCompile Include="Debugger.cpp" />
     <ClCompile Include="EditorInstance.cpp" />
     <ClCompile Include="GridRawDataV2.cpp" />
+    <ClCompile Include="GUICanvas.cpp" />
     <ClCompile Include="HexaGridMapMesh.cpp" />
     <ClCompile Include="HexaGridMapMeshV2.cpp" />
     <ClCompile Include="HexaGridMapShaderProgram.cpp" />
